--- a/example.html
+++ b/example.html
@@ -10,6 +10,10 @@
 <body>
     <h1>Hello World</h1>
 
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis libero enim sequi molestiae necessitatibus vitae dolorem repellat, eveniet dignissimos, quisquam ad, nihil consequatur debitis? Fugit distinctio itaque cum porro repudiandae!
+    </p>
+
     <script src="example.js" ></script>
 </body>
 
